Cleanup, optimize imports (#396)
Perform automated cleanup